# PixelGameJam

./: CMakeLists.txt  Enemy.c  Enemy.h  main.c
Background/: Background.c  Background.h
Enemy/: Enemy.c  Enemy.h
Game/: Game.c  Game.h
Player/: Player.c  Player.h
